--- a/estilos-wolvagen.css
+++ b/estilos-wolvagen.css
@@ -289,6 +289,15 @@ body{
 	padding: 45px;
 }
 
+/* Gracias.html */
+.gracias {
+    color: red;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media (min-width:320px) and (max-width:506px) {
     .plans {       
         padding: 20px 20px;        
