correcion de colores

--- a/estilos-wolvagen.css
+++ b/estilos-wolvagen.css
@@ -38,13 +38,20 @@ body{
     color: white;    
 }
 
+/* Centrar el texto en la imagen central */
+#hero .container {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /* Fondo gris encima de foto concesionario */
 .fondo-color {
     background-color: #1c1c1d47;
     padding-bottom: 2px;   
     min-height: 700px; 
 }
-
 
 /*contenedor del texto imagen principal y segundo*/
 .content-center{
@@ -205,7 +212,14 @@ body{
 
 .btn {
     background-color: white !important;
-    border-radius: 20px !important;
+    border-radius: 5px !important;
+}
+
+.btn:hover {
+    background-color: #17151c !important;
+    color: #fff !important;
+    border: none;
+    box-shadow: 8px 7px 12px 0px rgba(202,247,24,1);
 }
 
 /* Botón negro, cuadro blanco */
